# new-project

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
src/: main.rs  tests.rs
tests/context-template/: context.yaml
tests/context-template/dest/: context-info.json
tests/context-template/src/: .new-project.yml  context-info.json
tests/exclude/src/: .new-project.yml
tests/gitignore/src/: .new-project.yml
tests/ignore/src/: .new-project.yml
tests/not_gitignore/dest/: .gitignore
tests/not_gitignore/src/: .new-project.yml
tests/not_ignore/src/: .new-project.yml
tests/subdirectory/dest/subdirectory/: third.txt
